fixed branches and alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ h2 {
   background-color:
 }
 .container3{
-  float: right
+  float: center;
 }
 body{
   background-image: url(https://prd-wret.s3-us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/styles/full_width/public/thumbnails/image/Mount%20Rainier%20from%20South%20Hill%20USGS%20photo%20by%20Ed%20Ruttledge%20Jan%2018%202014%20%20IMG_1228-ps8.jpg?itok=ALMywfRU);
